# Closedpos

./: Cargo.toml
_old_/: menu.rs  orders.rs  theme.rs  utils.rs
data/: inventory.json  menu.json  orders.json  settings.json
src/: access_control.rs  employees.json  inventory.rs  json_handler.rs  main.rs  orders.rs  reports.rs  sales.json  search.rs  settings.rs  touchscreen_settings.rs  ui.rs
